styles/navbar.css
#navbar-main {
	background: var(--Pale-Black);
	bottom: 0;
	height: 10vh;
	position: fixed;
	width: 100%;
}

#navbar-main-content {
	align-items: center;
	display: flex;
	justify-content: space-around;
	width: 100%;
	height: 100%;
	background: var(--Pale-Black);
}

/* #region icons */

#navbar-main-content svg[id^="icon"] path {
	cursor: pointer;
	user-select: none;
}

#navbar-main-content svg[id^="icon"]:not(#icon-cart) {
	height: 50%;
	flex: 1;
}

#icon-cart {
	height: 55%;
	flex: 1;
}

/* #endregion icons */

/* #region #navbar-main-dropdown */

#navbar-main-dropdown {
	align-items: center;
	background: var(--Pale-Black);
	border-top-left-radius: 0.21em;
	border-top-right-radius: 0.21em;
	box-shadow: 0px -0.045em 0.21em 0.045em #4c4c4c99;
	color: white;
	display: flex;
	flex-direction: column;
	font: 700 1.5em "Quicksand", sans-serif;
	height: 180%;
	justify-content: space-evenly;
	position: absolute;
	top: 180%;
	opacity: 0;
	width: 100%;
	transition: top 0.4s ease-in;
	z-index: -3;
}

.navbar-main-dropdown-show {
	top: -180% !important;
}

@media screen and (max-width: 47.9em) {
	#navbar-main-dropdown {
		opacity: 1;
	}
}

/* #endregion #navbar-main-dropdown */

@media screen and (min-width: 48em) {
	#navbar-main {
		position: relative;
	}
	#icon-cart {
		flex: 5;
	}
}

